// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-dash cls 1`] = `
"import styles from '../../../../src/styles'

// \\"display:flex;\\"
const variant = styles.cls\`display: flex;\`
// \\"display:flex;\\"
const variant0 = styles.cls('display: flex;')
// \\"color:\\"+color.red+\\";\\"
const variant1 = styles.cls(
  ({color}) => \`
    color: \${color.red};
  \`
)
// {color: color.blue}
const variant2 = styles.cls({
  color: color.blue,
})
// \\"color:\\"+color.yellow+\\";\\"
const variant3 = styles.cls(({color}) => {
  return \`color: \${color.yellow};\`
})
// \\"color:\\"+color.green+\\";\\"
const variant4 = styles.cls(({color}) => {
  return {
    color: color.green,
  }
})
// if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"
const variant5 = styles.cls(({color}) => {
  if (IS_PROD) {
    return \`color: \${color.pink};\`
  }
  return \`color: \${color.yellow};\`
})
// if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = styles.cls(({color}) => {
  if (IS_PROD) {
    return {
      color: color.lightBlue,
    }
  }
  return {
    color: color.yellow,
  }
})
// return \\"height\\"+vh+\\";\\"
const variant7 = styles.cls(({vh}) => {
  return {
    height: vh,
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import styles from '../../../../src/styles'; // \\"display:flex;\\"

const variant = styles.cls(\\"display:flex;\\"); // \\"display:flex;\\"

const variant0 = styles.cls(\\"display:flex;\\"); // \\"color:\\"+color.red+\\";\\"

const variant1 = styles.cls(({
  color
}) => \\"color:\\" + color.red + \\";\\"); // {color: color.blue}

const variant2 = styles.cls(\\"color:\\" + (color.blue + \\";\\")); // \\"color:\\"+color.yellow+\\";\\"

const variant3 = styles.cls(({
  color
}) => {
  return \\"color:\\" + color.yellow + \\";\\";
}); // \\"color:\\"+color.green+\\";\\"

const variant4 = styles.cls(({
  color
}) => {
  return \\"color:\\" + (color.green + \\";\\");
}); // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant5 = styles.cls(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + color.pink + \\";\\";
  }

  return \\"color:\\" + color.yellow + \\";\\";
}); // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = styles.cls(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + (color.lightBlue + \\";\\");
  }

  return \\"color:\\" + (color.yellow + \\";\\");
}); // return \\"height\\"+vh+\\";\\"

const variant7 = styles.cls(({
  vh
}) => {
  return \\"height:\\" + (vh + \\";\\");
});"
`;

exports[`babel-plugin-dash insertGlobal 1`] = `
"import styles from '../../../../src/styles'

// styles.insertGlobal(\\"html{display:flex;}\\")
const variant = styles.insertGlobal\`html { display: flex; }\`
// \\"html{display:flex;}\\"
const variant0 = styles.insertGlobal('html { display: flex; } ')
// \\"html{color:\\"+color.red+\\";}\\"
const variant1 = styles.insertGlobal(
  ({color}) => \`
    html {
      color: \${color.red};
    }
  \`
)
// {html: {color: color.blue}}
const variant2 = styles.insertGlobal({
  html: {
    color: color.blue,
  },
})
// \\"html{color:\\"+color.yellow+\\";}\\"
const variant3 = styles.insertGlobal(({color}) => {
  return \`
    html { 
      color: \${color.yellow}; 
    }
  \`
})
// \\"html{color:\\"+color.green+\\";}\\"
const variant4 = styles.insertGlobal(({color}) => {
  return {
    html: {
      color: color.green,
    },
  }
})
// if (IS_PROD) return \\"html{color:\\"+color.pink+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"
const variant5 = styles.insertGlobal(({color}) => {
  if (IS_PROD) {
    return \`html { color: \${color.pink}; }\`
  }
  return \`html { color: \${color.yellow}; }\`
})
// if (IS_PROD) return \\"html{color:\\"+color.lightBlue+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"

const variant6 = styles.insertGlobal(({color}) => {
  if (IS_PROD) {
    return {
      html: {
        color: color.lightBlue,
      },
    }
  }
  return {
    html: {
      color: color.yellow,
    },
  }
})
// return \\"html{height\\"+vh+\\";}\\"
const variant7 = styles.insertGlobal(({vh}) => {
  return {
    html: {
      height: vh,
    },
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import styles from '../../../../src/styles'; // styles.insertGlobal(\\"html{display:flex;}\\")

const variant = styles.insertGlobal(\\"html{display:flex;}\\"); // \\"html{display:flex;}\\"

const variant0 = styles.insertGlobal(\\"html{display:flex;}\\"); // \\"html{color:\\"+color.red+\\";}\\"

const variant1 = styles.insertGlobal(({
  color
}) => \\"html{color:\\" + color.red + \\";}\\"); // {html: {color: color.blue}}

const variant2 = styles.insertGlobal(\\"html{\\" + (\\"color:\\" + (color.blue + \\";\\") + \\"}\\")); // \\"html{color:\\"+color.yellow+\\";}\\"

const variant3 = styles.insertGlobal(({
  color
}) => {
  return \\"html{color:\\" + color.yellow + \\";}\\";
}); // \\"html{color:\\"+color.green+\\";}\\"

const variant4 = styles.insertGlobal(({
  color
}) => {
  return \\"html{\\" + (\\"color:\\" + (color.green + \\";\\") + \\"}\\");
}); // if (IS_PROD) return \\"html{color:\\"+color.pink+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"

const variant5 = styles.insertGlobal(({
  color
}) => {
  if (IS_PROD) {
    return \\"html{color:\\" + color.pink + \\";}\\";
  }

  return \\"html{color:\\" + color.yellow + \\";}\\";
}); // if (IS_PROD) return \\"html{color:\\"+color.lightBlue+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"

const variant6 = styles.insertGlobal(({
  color
}) => {
  if (IS_PROD) {
    return \\"html{\\" + (\\"color:\\" + (color.lightBlue + \\";\\") + \\"}\\");
  }

  return \\"html{\\" + (\\"color:\\" + (color.yellow + \\";\\") + \\"}\\");
}); // return \\"html{height\\"+vh+\\";}\\"

const variant7 = styles.insertGlobal(({
  vh
}) => {
  return \\"html{\\" + (\\"height:\\" + (vh + \\";\\") + \\"}\\");
});"
`;

exports[`babel-plugin-dash keyframes 1`] = `
"import styles from '../../../../src/styles'

// styles.keyframe(\\"0%{opacity:0;}\\")
const variant = styles.keyframes\`0% { opacity: 0; } \`
// \\"0%{opacity:0;}\\"
const variant0 = styles.keyframes('0% { opacity: 0; } ')
// \\"0%{opacity:0;}100%{opacity:1;}\\"
const variant1 = styles.keyframes(
  () => \`
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1
    }
  \`
)
// no cahnge
const variant2 = styles.keyframes({
  '0%': {
    opacity: opacity,
  },
})
// \\"0%{opacity:\\"+opacity.none+\\";}100%{opacity:\\"+opacity.some+\\";}\\"
const variant3 = styles.keyframes(({opacity}) => {
  return \`
    0% {
      opacity: \${opacity.none};
    }
    100% {
      opacity: \${opacity.some};
    }
  \`
})
// \\"0%{opacity:\\"+opacity.none+\\";}100%{opacity:\\"+opacity.some+\\";}\\"
const variant4 = styles.keyframes(({opacity}) => {
  return {
    '0%': {
      opacity: opacity.none,
    },
    '100%': {
      opacity: opacity.some,
    },
  }
})
// if (IS_PROD) return \\"0%{opacity:\\"+opacity.none+\\";}\\"
// return \\"0%{opacity:\\"+opacity.some+\\";}\\"
const variant5 = styles.keyframes(({opacity}) => {
  if (IS_PROD) {
    return \`0% { opacity: \${opacity.none}; }\`
  }
  return \`0% { opacity: \${opacity.some}; }\`
})
// if (IS_PROD) return \\"0%{color:\\"+color.lightBlue+\\";}\\"
// return \\"0%{color:\\"+color.yellow+\\";}\\"
const variant6 = styles.keyframes(({color}) => {
  if (IS_PROD) {
    return {
      '0%': {
        color: color.lightBlue,
      },
    }
  }
  return {
    '0%': {
      color: color.yellow,
    },
  }
})
// return \\"0%{height:\\"+vh+\\";}100%{height:100px;}\\"
const variant7 = styles.keyframes(({vh}) => {
  return {
    '0%': {
      height: vh,
    },
    '100%': {
      height: 100,
    },
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import styles from '../../../../src/styles'; // styles.keyframe(\\"0%{opacity:0;}\\")

const variant = styles.keyframes(\\"0%{opacity:0;}\\"); // \\"0%{opacity:0;}\\"

const variant0 = styles.keyframes(\\"0%{opacity:0;}\\"); // \\"0%{opacity:0;}100%{opacity:1;}\\"

const variant1 = styles.keyframes(() => \\"0%{opacity:0;}100%{opacity:1}\\"); // no cahnge

const variant2 = styles.keyframes(\\"0%{\\" + (\\"opacity:\\" + (opacity + \\";\\") + \\"}\\")); // \\"0%{opacity:\\"+opacity.none+\\";}100%{opacity:\\"+opacity.some+\\";}\\"

const variant3 = styles.keyframes(({
  opacity
}) => {
  return \\"0%{opacity:\\" + opacity.none + \\";}100%{opacity:\\" + opacity.some + \\";}\\";
}); // \\"0%{opacity:\\"+opacity.none+\\";}100%{opacity:\\"+opacity.some+\\";}\\"

const variant4 = styles.keyframes(({
  opacity
}) => {
  return \\"0%{\\" + (\\"opacity:\\" + (opacity.none + \\";\\") + \\"}\\") + (\\"100%{\\" + (\\"opacity:\\" + (opacity.some + \\";\\") + \\"}\\"));
}); // if (IS_PROD) return \\"0%{opacity:\\"+opacity.none+\\";}\\"
// return \\"0%{opacity:\\"+opacity.some+\\";}\\"

const variant5 = styles.keyframes(({
  opacity
}) => {
  if (IS_PROD) {
    return \\"0%{opacity:\\" + opacity.none + \\";}\\";
  }

  return \\"0%{opacity:\\" + opacity.some + \\";}\\";
}); // if (IS_PROD) return \\"0%{color:\\"+color.lightBlue+\\";}\\"
// return \\"0%{color:\\"+color.yellow+\\";}\\"

const variant6 = styles.keyframes(({
  color
}) => {
  if (IS_PROD) {
    return \\"0%{\\" + (\\"color:\\" + (color.lightBlue + \\";\\") + \\"}\\");
  }

  return \\"0%{\\" + (\\"color:\\" + (color.yellow + \\";\\") + \\"}\\");
}); // return \\"0%{height:\\"+vh+\\";}100%{height:100px;}\\"

const variant7 = styles.keyframes(({
  vh
}) => {
  return \\"0%{\\" + (\\"height:\\" + (vh + \\";\\") + \\"}\\") + (\\"100%{\\" + (\\"height:100px;\\" + \\"}\\"));
});"
`;

exports[`babel-plugin-dash one 1`] = `
"import styles from '../../../../src/styles'

// \\"display:flex;\\"
const variant = styles.one\`display: flex;\`
// \\"display:flex;\\"
const variant0 = styles.one('display: flex;')
// \\"color:\\"+color.red+\\";\\"
const variant1 = styles.one(
  ({color}) => \`
    color: \${color.red};
  \`
)
// {color: color.blue}
const variant2 = styles.one({
  color: color.blue,
})
// \\"color:\\"+color.yellow+\\";\\"
const variant3 = styles.one(({color}) => {
  return \`color: \${color.yellow};\`
})
// \\"color:\\"+color.green+\\";\\"
const variant4 = styles.one(({color}) => {
  return {
    color: color.green,
  }
})
// if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"
const variant5 = styles.one(({color}) => {
  if (IS_PROD) {
    return \`color: \${color.pink};\`
  }
  return \`color: \${color.yellow};\`
})
// if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = styles.one(({color}) => {
  if (IS_PROD) {
    return {
      color: color.lightBlue,
    }
  }
  return {
    color: color.yellow,
  }
})
// return \\"height\\"+vh+\\";\\"
const variant7 = styles.one(({vh}) => {
  return {
    height: vh,
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import styles from '../../../../src/styles'; // \\"display:flex;\\"

const variant = /*#__PURE__*/styles.one(\\"display:flex;\\"); // \\"display:flex;\\"

const variant0 = /*#__PURE__*/styles.one(\\"display:flex;\\"); // \\"color:\\"+color.red+\\";\\"

const variant1 = /*#__PURE__*/styles.one(({
  color
}) => \\"color:\\" + color.red + \\";\\"); // {color: color.blue}

const variant2 = /*#__PURE__*/styles.one(\\"color:\\" + (color.blue + \\";\\")); // \\"color:\\"+color.yellow+\\";\\"

const variant3 = /*#__PURE__*/styles.one(({
  color
}) => {
  return \\"color:\\" + color.yellow + \\";\\";
}); // \\"color:\\"+color.green+\\";\\"

const variant4 = /*#__PURE__*/styles.one(({
  color
}) => {
  return \\"color:\\" + (color.green + \\";\\");
}); // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant5 = /*#__PURE__*/styles.one(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + color.pink + \\";\\";
  }

  return \\"color:\\" + color.yellow + \\";\\";
}); // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = /*#__PURE__*/styles.one(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + (color.lightBlue + \\";\\");
  }

  return \\"color:\\" + (color.yellow + \\";\\");
}); // return \\"height\\"+vh+\\";\\"

const variant7 = /*#__PURE__*/styles.one(({
  vh
}) => {
  return \\"height:\\" + (vh + \\";\\");
});"
`;

exports[`babel-plugin-dash styles 1`] = `
"import styles from '../../../../src/styles'

const cls = styles({
  // display:flex;
  default: 'display: flex;',
  // \\"color:\\"+color.red+\\";\\"
  colorRed: ({color}) => \`
    color: \${color.red};
  \`,
  // \\"color:\\"+color.blue+\\";\\"
  colorBlue: ({color}) => ({
    color: color.blue,
  }),
  // \\"color:\\"+color.yellow+\\";\\"
  colorYellow: ({color}) => {
    return \`color: \${color.yellow};\`
  },
  // \\"color:\\"+color.green+\\";\\"
  colorGreen: ({color}) => {
    return {
      color: color.green,
    }
  },
  // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorProdPink: ({color}) => {
    if (IS_PROD) {
      return \`color: \${color.pink};\`
    }
    return \`color: \${color.yellow};\`
  },
  // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorLightBlue: ({color}) => {
    if (IS_PROD) {
      return {
        color: color.lightBlue,
      }
    }
    return {
      color: color.yellow,
    }
  },
  // return \\"color:\\"+color.font.yellow+\\";\\"
  colorFontYellow: ({color}) => {
    return {
      color: color.font.bath.yellow,
    }
  },
  // return \\"height\\"+vh+\\";\\"
  vh: ({vh}) => {
    return {
      height: vh,
    }
  },
})


      ↓ ↓ ↓ ↓ ↓ ↓

import styles from '../../../../src/styles';
const cls = /*#__PURE__*/styles({
  // display:flex;
  default: \\"display:flex;\\",
  // \\"color:\\"+color.red+\\";\\"
  colorRed: ({
    color
  }) => \\"color:\\" + color.red + \\";\\",
  // \\"color:\\"+color.blue+\\";\\"
  colorBlue: ({
    color
  }) => \\"color:\\" + (color.blue + \\";\\"),
  // \\"color:\\"+color.yellow+\\";\\"
  colorYellow: ({
    color
  }) => {
    return \\"color:\\" + color.yellow + \\";\\";
  },
  // \\"color:\\"+color.green+\\";\\"
  colorGreen: ({
    color
  }) => {
    return \\"color:\\" + (color.green + \\";\\");
  },
  // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorProdPink: ({
    color
  }) => {
    if (IS_PROD) {
      return \\"color:\\" + color.pink + \\";\\";
    }

    return \\"color:\\" + color.yellow + \\";\\";
  },
  // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorLightBlue: ({
    color
  }) => {
    if (IS_PROD) {
      return \\"color:\\" + (color.lightBlue + \\";\\");
    }

    return \\"color:\\" + (color.yellow + \\";\\");
  },
  // return \\"color:\\"+color.font.yellow+\\";\\"
  colorFontYellow: ({
    color
  }) => {
    return \\"color:\\" + (color.font.bath.yellow + \\";\\");
  },
  // return \\"height\\"+vh+\\";\\"
  vh: ({
    vh
  }) => {
    return \\"height:\\" + (vh + \\";\\");
  }
});"
`;
